--- a/2.Semester/VerteilteSystemeLabor/Aufgabe1/gta_v1/public/stylesheets/style.css
+++ b/2.Semester/VerteilteSystemeLabor/Aufgabe1/gta_v1/public/stylesheets/style.css
@@ -44,20 +44,39 @@ a {
   color: var(--link-color);
 }
 
-b {
-  width: 300px;
-  border: 15px black;
-  padding: 50px;
-  margin: 20px;
-
+div.pos1 {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+}
+div.pos2{
+  position: fixed;
+  top: 20px;
+  left: 10%;
+}
+div.pos3{
+  position: fixed;
+  top: 20px;
+  left: 50%;
+}
+div.pos4{
+  position: fixed;
+  top: 20px;
+  left: 50%;
 }
 .div1 {
+  position: fixed;
+  top: 100px;
+  left: 0;
   width: 300px;
   height: 500px;
   padding: 50px;
   border: 1px solid black;
 }
 .div2{
+  position: fixed;
+  top: 100px;
+  right: 0;
   width: 600px;
   height: 300px;
   padding: 50px;
